--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -11,17 +11,6 @@ html, body {
   font-size: 120%;
 }
 
-/* Layout */
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-main {
-  flex: 1;
-}
-
 /* Header */
 header {
   color: black;
